--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -3,6 +3,8 @@ id: download
 title: Download
 description: "HACS download steps"
 ---
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 You use the [HACS download script](https://github.com/hacs/get) to setup HACS.
 
@@ -13,9 +15,10 @@ If you are not sure what type of Home Assistant you are using, then you should p
 
 :::
 
-## Home Assistant OS
+<Tabs label="test">
+  <TabItem value="os" label="OS/Supervised" default>
 
-1. Go to the Supervisor panel
+1. Go to the [Add-on store](https://my.home-assistant.io/redirect/supervisor_store/)
 1. Install one of the SSH add-ons (you need to enable advanced mode in your user profile to see them)
 1. Configure the SSH add-on you chose by following the documentation for it
 1. Start the SSH add-on
@@ -26,11 +29,14 @@ If you are not sure what type of Home Assistant you are using, then you should p
 wget -O - https://get.hacs.xyz | bash -
 ```
 
-## Home Assistant Container
+  </TabItem>
+  <TabItem value="container" label="Container">
 
 For Home Assistant Container you have 2 options.
 
-### Option 1: Run the downloader on the host OS
+<Tabs>
+  <TabItem value="host" label="Host" default>
+
 
 1. Open a terminal
 1. Change directory to your Home Assistant configuration directory
@@ -40,7 +46,8 @@ For Home Assistant Container you have 2 options.
 wget -O - https://get.hacs.xyz | bash -
 ```
 
-### Option 2: Run the downloader inside the container
+  </TabItem>
+  <TabItem value="container" label="Container">
 
 1. Open a terminal
 1. Go inside the container with `docker exec -it homeassistant bash`
@@ -50,10 +57,13 @@ wget -O - https://get.hacs.xyz | bash -
 wget -O - https://get.hacs.xyz | bash -
 ```
 
-4. Exit the container with `exit`
+
+  </TabItem>
+</Tabs>
 
 
-## Home Assistant Core
+  </TabItem>
+  <TabItem value="core" label="Core">
 
 1. Open a terminal
 1. Change to the user that is running Home Assistant
@@ -63,23 +73,17 @@ wget -O - https://get.hacs.xyz | bash -
 wget -O - https://get.hacs.xyz | bash -
 ```
 
-## Home Assistant Supervised
+  </TabItem>
 
-The same as [Home Assistant OS](#home-assistant-os), but you can also run the script directly on the host OS.
+</Tabs>
 
-1. Open a terminal
-1. Run the HACS download script
 
-```bash
-wget -O - https://get.hacs.xyz | bash -
-```
 
-:::tip
+## Troubleshooting
 
-Having issues accessing `https://get.hacs.xyz`? try this instead:
 
-```
-wget -O - https://raw.githubusercontent.com/hacs/get/main/get | bash -
-```
+- CTRL+V not working for you? 
+  - Try CTRL+SHIFT+V instead
 
-:::
+- Having issues accessing `https://get.hacs.xyz` in the terminal?
+  - Try it with `https://raw.githubusercontent.com/hacs/get/main/get` instead
