--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -84,8 +84,8 @@ wget -O - https://get.hacs.xyz | bash -
 
 - `CTRL+V` not working for you? 
   - Try `CTRL+SHIFT+V` instead
-  - Or `Shift+Insert`
-  - Or `Right Click`
+  - Try `SHIFT+INS(insert)` instead
+  - Try `Right-click` instead
 
 - Having issues accessing `https://get.hacs.xyz` in the terminal?
   - Try it with `https://raw.githubusercontent.com/hacs/get/main/get` instead
