Add additional paste methods in Troubleshooting (#272)
* Add additional paste methods in Troubleshooting

Fix to https://github.com/hacs/integration/issues/2555

* Update documentation/setup/download.mdx

Co-authored-by: Joakim Sørensen <hi@ludeeus.dev>

--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -82,8 +82,10 @@ wget -O - https://get.hacs.xyz | bash -
 ## Troubleshooting
 
 
-- CTRL+V not working for you? 
-  - Try CTRL+SHIFT+V instead
+- `CTRL+V` not working for you? 
+  - Try `CTRL+SHIFT+V` instead
+  - Try `SHIFT+INS(insert)` instead
+  - Try `Right-click` instead
 
 - Having issues accessing `https://get.hacs.xyz` in the terminal?
   - Try it with `https://raw.githubusercontent.com/hacs/get/main/get` instead
