--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -89,3 +89,6 @@ wget -O - https://get.hacs.xyz | bash -
 
 - Having issues accessing `https://get.hacs.xyz` in the terminal?
   - Try it with `https://raw.githubusercontent.com/hacs/get/main/get` instead
+
+- Having issues updating or installing repositories?
+  - If Logs show an error "timeout() got an unexpected keyword argument 'loop'" then delete the "deps" folder inside the config folder and restart HA.
