More install -> download changes

--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 You use the [HACS download script](https://github.com/hacs/get) to setup HACS.
 
 :::info
-If you are not sure what type of Home Assistant you are using, then you should probably not install HACS (or any other custom integration), but if you really want to know, you can find it here: 
+If you are not sure what type of Home Assistant you are using, then you should probably not use HACS (or any other custom integration), but if you really want to know, you can find it here: 
 
 [![Open your Home Assistant instance and show your Home Assistant version information.](https://my.home-assistant.io/badges/info.svg)](https://my.home-assistant.io/redirect/info/)
 
