--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -9,16 +9,13 @@ import TabItem from '@theme/TabItem';
 You use the [HACS download script](https://github.com/hacs/get) to setup HACS.
 
 :::info
-If you are not sure what type of Home Assistant you are using, then you should probably not use HACS (or any other custom integration), but if you really want to know, you can find it here: 
-
-[![Open your Home Assistant instance and show your Home Assistant version information.](https://my.home-assistant.io/badges/info.svg)](https://my.home-assistant.io/redirect/info/)
-
+If you are not sure what type of Home Assistant you are using or how to find that, then you should probably not use HACS (or any other custom integration).
 :::
 
 <Tabs label="test">
   <TabItem value="os" label="OS/Supervised" default>
 
-1. Go to the [Add-on store](https://my.home-assistant.io/redirect/supervisor_store/)
+1. Go to the Add-on store
 1. Install one of the SSH add-ons (you need to enable advanced mode in your user profile to see them)
 1. Configure the SSH add-on you chose by following the documentation for it
 1. Start the SSH add-on
