--- a/documentation/categories/index.mdx
+++ b/documentation/categories/index.mdx
@@ -1,6 +1,6 @@
 ---
 id: categories
-title: Categories
+title: Category Overview
 description: "Categories available in HACS."
 sidebar_position: 0
 ---
