adjust index files

--- a/documentation/publisher/index.mdx
+++ b/documentation/publisher/index.mdx
@@ -5,6 +5,9 @@ description: 'Everything HACS for publishers.'
 sidebar_position: 0
 ---
 
+import DocCardList from '@theme/DocCardList'
+import { useCurrentSidebarCategory } from '@docusaurus/theme-common'
+
 Hi there :wave:
 
 This is the beginning of the publisher documentation.
@@ -13,3 +16,6 @@ Use the sidebar to navigate this section.
 
 - [If you are looking for how to use HACS have a look at the user documentation](/docs/user)
 - [If you are looking for how to develop/change something for HACS itself have a look at the developer documentation](/docs/developer)
+
+<br/><br/>
+<DocCardList items={useCurrentSidebarCategory().items.filter(entry => entry.label !== frontMatter.title)} />
