--- a/documentation/developer/index.mdx
+++ b/documentation/developer/index.mdx
@@ -5,6 +5,9 @@ description: 'Everything HACS for publishers.'
 sidebar_position: 0
 ---
 
+import DocCardList from '@theme/DocCardList'
+import { useCurrentSidebarCategory } from '@docusaurus/theme-common'
+
 Hi there :wave:
 
 This is the beginning of the developer documentation.
@@ -14,11 +17,8 @@ Use the sidebar to navigate this section.
 - [If you are looking for how to use HACS have a look at the user documentation](/docs/user)
 - [If you are looking for how to publish something that can be tracked by HACS have a look at the publisher documentation](/docs/publisher)
 
----
-
-This integration is **massive** and there are a lot of areas to contribute to.
-
-- [Documentation](/docs/developer/documentation)
-- [Backend](/docs/developer/backend)
-- [Frontend](/docs/developer/frontend)
-- [Translation](/docs/developer/translation)
+<br />
+<br />
+<DocCardList
+  items={useCurrentSidebarCategory().items.filter((entry) => entry.label !== frontMatter.title)}
+/>
