--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -25,6 +25,7 @@ If you are not sure what type of Home Assistant you are using or how to find tha
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
+After the script is completed, remember to restart Home Assistant.
 
   </TabItem>
   <TabItem value="container" label="Container">
