--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -34,7 +34,8 @@ wget -O - https://get.hacs.xyz | bash -
 1. Run the HACS download script
 
 ```bash
-wget -O - https://get.hacs.xyz | bash -
+wget -O - https://get.hacs.xyz | bash 
+
 ```
 
 
