Added required restart step
Added for Container and Core.  Related to  PR #438

--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -36,7 +36,7 @@ wget -O - https://get.hacs.xyz | bash -
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
-
+1. After the script completes, restart the container
 
   </TabItem>
   <TabItem value="core" label="Core">
@@ -48,7 +48,7 @@ wget -O - https://get.hacs.xyz | bash -
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
-
+1. After the script completes, restart Core
   </TabItem>
 
 </Tabs>
