--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -21,11 +21,11 @@ If you are not sure what type of Home Assistant you are using or how to find tha
 1. Start the SSH add-on
 1. Connect to the SSH add-on
 1. Run the HACS download script
-1. After the script completes, restart Home Assistant
 
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
+1. After the script completes, restart Home Assistant
 
   </TabItem>
   <TabItem value="container" label="Container">
@@ -37,7 +37,7 @@ wget -O - https://get.hacs.xyz | bash -
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
-
+1. After the script completes, restart the container
 
   </TabItem>
   <TabItem value="core" label="Core">
@@ -49,6 +49,7 @@ wget -O - https://get.hacs.xyz | bash -
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
+1. After the script completes, restart Core
 
   </TabItem>
 
