--- a/documentation/setup/download.mdx
+++ b/documentation/setup/download.mdx
@@ -21,10 +21,11 @@ If you are not sure what type of Home Assistant you are using or how to find tha
 1. Start the SSH add-on
 1. Connect to the SSH add-on
 1. Run the HACS download script
-
+1. After the script completes, restart Home Assistant
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
+
 
   </TabItem>
   <TabItem value="container" label="Container">
@@ -32,7 +33,7 @@ wget -O - https://get.hacs.xyz | bash -
 1. Open a terminal
 1. Go inside the container with `docker exec -it homeassistant bash` (or similar)
 1. Run the HACS download script
-
+1. After the script completes, restart the container
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
@@ -44,10 +45,11 @@ wget -O - https://get.hacs.xyz | bash -
 1. Open a terminal
 1. Change to the user that is running Home Assistant
 1. Run the HACS download script
-
+1. After the script completes, restart Core
 ```bash
 wget -O - https://get.hacs.xyz | bash -
 ```
+
 
   </TabItem>
 
